--- a/client/style/buttons.css
+++ b/client/style/buttons.css
@@ -1,27 +1,16 @@
 button {
     padding: 10px 10px;
 }
-.function-buttons {
+.function-panel {
+    margin-left: 6px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Two columns with equal width */
+    grid-template-columns: repeat(2, 2fr);
 }
-/* Style for the on/off buttons */
-.function-buttons button {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    flex: 1; /* Each button covers 50% of the container width */
-    text-align: center; /* Optional: Center-align the button content */
-    width: 80px;
-    height: 80px;
-}
-
-.function-buttons button name {
+.function-panel button name {
     font-size: 0.7em;
 }
 /* Style for the active (pressed/on) buttons */
-.function-buttons button.active {
+.function-panel button.active {
     background-color: #007bff; /* Change to your desired active button color */
     color: #fff; /* Change to your desired active button text color */
 }
