--- a/client/style/range_input.css
+++ b/client/style/range_input.css
@@ -1,94 +1,40 @@
-input[type=range] {
+input[type=range][orient=vertical] {
+  -webkit-appearance: slider-vertical;
+  width: 18px;
+  height: 250px;
+  padding: 0 5px;
+  margin-left: auto;
+  margin-right: auto;
+}
+ input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    margin: 18px 0;
-    width: 100%;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    width: 100px;
+    height: 20px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+    left: -40px;
+    position: relative;
   }
-  input[type=range]:focus {
-    outline: none;
+ input[type=range]::-moz-range-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    width: 100px;
+    height: 20px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+    left: -40px;
+    position: relative;
   }
-  input[type=range]::-webkit-slider-runnable-track {
-    transform: rotate(90deg);
-    width: 200px;
-    height: 8.4px;
+input[type=range]::-moz-range-track {
+    height: 250px;
+    width: 15px;
     cursor: pointer;
     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
     background: #3071a9;
     border-radius: 1.3px;
     border: 0.2px solid #010101;
-  }
-  input[type=range]::-webkit-slider-thumb {
-    transform: rotate(90deg);
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
-    height: 36px;
-    width: 16px;
-    border-radius: 3px;
-    background: #ffffff;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -14px;
-  }
-  input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #367ebd;
-    transform: rotate(90deg);
-  }
-  input[type=range]::-moz-range-track {
-    transform: rotate(90deg);
-    width: 200px;
-    height: 8.4px;
-    cursor: pointer;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    background: #3071a9;
-    border-radius: 1.3px;
-    border: 0.2px solid #010101;
-  }
-  input[type=range]::-moz-range-thumb {
-    transform: rotate(90deg);
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
-    height: 36px;
-    width: 16px;
-    border-radius: 3px;
-    background: #ffffff;
-    cursor: pointer;
-  }
-  input[type=range]::-ms-track {
-    transform: rotate(90deg);
-    width: 200px;
-    height: 8.4px;
-    cursor: pointer;
-    background: transparent;
-    border-color: transparent;
-    border-width: 16px 0;
-    color: transparent;
-  }
-  input[type=range]::-ms-fill-lower {
-    transform: rotate(90deg);
-    background: #2a6495;
-    border: 0.2px solid #010101;
-    border-radius: 2.6px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  }
-  input[type=range]::-ms-fill-upper {
-    transform: rotate(90deg);
-    background: #3071a9;
-    border: 0.2px solid #010101;
-    border-radius: 2.6px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  }
-  input[type=range]::-ms-thumb {
-    transform: rotate(90deg);
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
-    height: 36px;
-    width: 16px;
-    border-radius: 3px;
-    background: #ffffff;
-    cursor: pointer;
-  }
-  input[type=range]:focus::-ms-fill-lower {
-    background: #3071a9;
-  }
-  input[type=range]:focus::-ms-fill-upper {
-    background: #367ebd;
   }
