--- a/client/style/buttons.css
+++ b/client/style/buttons.css
@@ -35,3 +35,47 @@ button.active {
     padding: 0;
     margin: 0;
 }
+.container-selector {
+    width: 100%;
+    text-align: center;
+}
+.container-selector button {
+    width: 24%;
+    padding: 0px;
+    margin: 0;
+    border-right: 1px;
+    border-radius: 0;
+    height: 60px;
+}
+.menu-icon {
+    flex-direction: column;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.bar {
+    width: 45px;
+    height: 2px;
+    background-color: white;
+    margin: 10px 0;
+}
+#main-menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#main-menu li {
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    cursor: pointer;
+}
+
+#main-menu li:last-child {
+    border-bottom: none; /* Remove border from the last item */
+}
