--- a/client/style/main.css
+++ b/client/style/main.css
@@ -108,8 +108,11 @@ button {
 }
 
 .train-image img {
-    max-height: 100%;
+    max-height: 100px;
     vertical-align: middle;
+}
+.trainImg {
+    max-height: 300px;
 }
 .train-address {
     color: grey;
