--- a/client/style/panelBuilder.css
+++ b/client/style/panelBuilder.css
@@ -15,23 +15,23 @@ canvas {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     cursor: move;
 }
-.buttons-content {
+.buttons-container .buttons-content {
     margin-top: 10px;
 }
-.buttons-content button {
+.buttons-container .buttons-content button {
     width: 100%;
     min-height: 62px;
 }
-.title-bar {
+.buttons-container .title-bar {
     cursor: move;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.panel-title {
+.buttons-container .panel-title {
     font-weight: bold;
 }
-.toggle-btn {
+.buttons-container .toggle-btn {
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -41,4 +41,28 @@ canvas {
     padding: 0 5px;
     width: 30px;
     height: 30px;
+}
+#context-menu {
+    display: none;
+    position: absolute;
+    background-color: var(--background);
+    border: 1px solid var(--border);
+    border-radius: 5px; /* Rounded corners */
+    padding: 5px 0; /* Add some padding */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
+}
+
+#context-menu ul {
+    list-style-type: none; /* Remove default list styles */
+    padding: 0;
+    margin: 0;
+}
+
+#context-menu li {
+    padding: 8px 15px; /* Add padding */
+    cursor: pointer; /* Show pointer cursor on hover */
+}
+
+#context-menu li:hover {
+    background-color: var(--button-hover); /* Light gray background on hover */
 }
