Starting functions code

--- a/client/style/main.css
+++ b/client/style/main.css
@@ -17,6 +17,9 @@ nav {
 .content {
     flex-grow: 1;
   }
+section .padded {
+    margin: 1em;
+}
 .footer {
     width:100%;
     background: var(--background);
