--- a/client/style/main.css
+++ b/client/style/main.css
@@ -45,28 +45,59 @@ button {
     font-size: 16px;
 }
 .container {
+    background-color: white;
 }
 .train {
     display: inline-block;
     width: 100%;
     overflow-y: hidden;
 }
+.train-details {
+    display: flex;
+    position: relative;
+}
 .train-image {
-    min-height: 100px;
+    min-height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
     background: white;
+    z-index: 1;
+    width: 100%;
 }
-.train-details {
-    margin: 10px;
+.bubble {
+    display: block; /* Display the long name and edit columns */
+    position: relative; /* Position these elements relative to the card */
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 8px;
+    font-weight: bold;
+    width: max-content;
+    z-index: 10;
+}
+.train-name {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    max-width: 230px;
+}
+.DCCNumber {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.bottomRight {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
 }
 .train-control {
-    margin: 10px;
+    margin: 0px 10px;
 }
 
 .train-image img {
-    max-height: 100px;
+    max-height: 180px;
     vertical-align: middle;
 }
 .trainImg {
@@ -77,21 +108,11 @@ button {
     text-transform: uppercase;
     font-size: 0.7em;
 }
-.train-name {
-    font-size: 1.5em;
-    margin-top: 10px;
-    margin-bottom: 0px;
-}
 .train-control {
     display: flex;
 }
 .train-control panel {
     flex: 1;
-}
-.throttle-value {
-    font-size: 2em;
-    top: -10px;
-    position: relative;
 }
 #addTrain, #addPanel {
     width: 100%;
