--- a/client/style/buttons.css
+++ b/client/style/buttons.css
@@ -12,7 +12,12 @@ button {
     display: grid;
     grid-template-columns: repeat(2, 2fr);
     max-height: 365px;
+    width: 180px;
+    max-width: 180px;
     overflow-y: scroll;
+    padding-top: 5px;
+    padding-left: 15px;
+    border: 1px solid rgb(33, 37, 41);
 }
 .function-panel button {
   height: 80px;
@@ -25,6 +30,12 @@ button {
 .function-panel button name {
     font-size: 0.7em;
     display: inline-block;
+}
+.function-panel .all-functions-button {
+  grid-column: span 2;
+  width: 165px;
+  height: 50px;
+  font-size: 20px;
 }
 
 button.active {
