--- a/client/style/popup.css
+++ b/client/style/popup.css
@@ -57,3 +57,48 @@ input[type="number"] {
     padding: 10px;
     font-size: 16px;
 }
+
+.imageSearchModal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+.imageSearchModal .modal-content {
+    background-color: rgb(33, 37, 41);
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid white;
+    width: 80%;
+  }
+.imageSearchModal .closeImageSelector {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    position: relative;
+    top: -20px;
+    right: -10px;
+    cursor: pointer;
+}
+.imageSearchModal.close:hover,
+.imageSearchModal.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+#imageSearchResults img {
+    height: 150px;
+    margin: 5px;
+    cursor: pointer;
+}
+.selectedImage {
+    height: 150px;
+    margin: 5px;
+}
